welcome.lessons.welcome.array.array123.Array123.scala.error
array123:8: error: value lenght is not a member of Array[Int]
  for (i <- 3 to nums.lenght){
                      ^