welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  
  var one:Int = nums(0)
  var two:Int = nums(1)
  var three:Int = nums(2)
  
  
  for (i <- 3 to nums.lenght){
    
    if (one == 1 && two == 2 && three == 3){
      return true
    }
    
    one = two
    two = three
    three = nums(i)
  }
  
}